Renamed round to frame and added shot to frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(training)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES src/BowlingResult.cpp src/BowlingResult.h src/Round.cpp src/Round.h)
+set(SOURCE_FILES src/BowlingResult.cpp src/BowlingResult.h src/Frame.cpp src/Frame.h)
 add_executable(training main.cpp ${SOURCE_FILES})
 
 ################################
@@ -16,6 +16,6 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 ################################
 # Unit Tests
 ################################
-add_executable(runUnitTests test/testBowlingScore.cpp ${SOURCE_FILES} src/Round.cpp src/Round.h)
+add_executable(runUnitTests test/testBowlingScore.cpp ${SOURCE_FILES} src/Frame.cpp src/Frame.h)
 target_link_libraries(runUnitTests gtest gtest_main)
 add_test(runUnitTests runUnitTests)
